--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ nav{
     justify-content: space-between;
     align-items: center;
     /* padding:15px 20px; */
-    padding:10px 20px 10px 40px;
-    font-size: 15px;
+    padding:5px 20px 5px 40px;
+    font-size: 12px;
     /* width: 1080px; */
     /* width: 80%; */
     /* width: 1300px; */
@@ -54,7 +54,7 @@ nav{
 .navlist{
     display: flex;
     justify-content: space-between;
-    width: 600px;
+    width: 500px;
     /* width: 50vw; */
     align-items: center;
 }
@@ -64,6 +64,7 @@ nav{
     /* color: black; */
     color: white;
     font-weight: 500;
+    font-size: 12px;
 }
 .navlist a:hover{
     color: #4b4949;
@@ -81,7 +82,7 @@ nav{
     background-color: transparent;
     /* font-weight: bold; */
     font-weight: 500;
-    font-size: 15px;
+    font-size: 12px;
     cursor: pointer;
     color: white;
 }
@@ -92,7 +93,7 @@ nav{
     background-color: #4b4949;
 }
 #navget{
-    padding: 15px 25px;
+    padding: 12px 20px;
     background-color:#065540;
     color: white;
     border-radius: 10px;
@@ -170,39 +171,40 @@ nav{
     /* background: #1E8043; */
     background-color: white;
     padding-bottom: 30px;
-    padding-top: 80px;
+    padding-top: 130px;
 }
 .hero{
     margin: auto;
-    height: 600px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items:center ;
     /* width: 1000px; */
     /* width: 90vw; */
-    width: 1300px;
+    width: 80vw;
 }
 .herocontvid{
     display: flex;
     justify-content: space-between;
-    align-items:center ;
-    align-content: center;
-    height: 80%;
+    /* align-items:center ; */
+    /* align-content: center; */
+    /* height: 80%; */
     margin: auto;
+    /* width: 100%; */
     /* gap: 60px; */
 }
 .herocontent{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 100%;
-    width: 700px;
+    height: 80%;
+    width: 1000px;
     gap: 10px;
 }
 .herocontent h2{
-    font-size: 55px;
-    width: 90%;
+    font-size: 50px;
+    /* width: 90%; */
     /* font-weight:bolder !important; */
     font-family: "Poppins", serif;
     font-weight: 700;
@@ -217,12 +219,12 @@ nav{
     filter: invert(47%) sepia(45%) saturate(300%) hue-rotate(90deg);
 }
 .herocontent p{
-    font-size: 18px;
-    width: 90%;
+    font-size: 15px;
+    /* width: 90%; */
 }
 .herobtn button{
     border: none;
-    padding: 15px 25px;
+    padding: 12px 20px;
     font-weight: bold;
     font-size: 14px;
 }
@@ -238,7 +240,7 @@ nav{
 }
 .getdemobtn {
     position: relative;
-    padding: 15px 25px;
+    padding: 12px 20px;
     font-size: 14px;
     font-weight: bold;
     background-color: transparent;
@@ -465,7 +467,7 @@ iframe{
     position: absolute;
     bottom: 0;
     left: 0;
-    top: 610px;
+    top: 510px;
     width: 100%;
     height: 100px;
     right: 0;
@@ -805,11 +807,11 @@ footer {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding:10px 20px 10px 40px;
+        padding:5px 20px 5px 40px;
         font-size: 15px;
         /* width: 90%; */
         margin: auto;
-    }
+    }   
     .floating-image
     {
         height: 450px;
@@ -1219,3 +1221,257 @@ footer {
         width: 90vw;
     }
 }
+
+
+
+
+/* Integrations */
+
+.inte{
+    margin-top: 120px;
+}
+
+.inte h1{
+    text-align: center;
+    font-size:40px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.cont{
+    margin: auto;
+    width: 90vw;
+    max-width: 800px;
+    /* border: 1px solid black; */
+    height: 200px;
+    margin-bottom: 40px;
+    background: rgba(4, 59, 4, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 15px;
+    padding: 20px;
+    /* box-shadow: 2px 2px 2px 4px rgba(4, 59, 4, 0.1);; */
+
+}
+.cont h3{
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.cont2{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 40px;
+}
+.cont2 p{
+    border-radius: 5px;
+    border: none;
+    padding: 12px 20px;
+    font-size: 14px;
+    background-color: var(--secondary-color);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    color: white;
+}
+.cont2 p:hover{
+    background-color: #088667;
+    color: black;
+}
+
+/* help */
+
+.integration-section h1{
+    text-align: center;
+    font-size:40px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+
+
+
+
+
+.road-map-main {
+margin: 50px 0 51px;
+.road-map-wrapper {
+position: relative;
+display: flex;
+flex-direction: column;
+height: 175px;
+@media (max-width: 991px) {
+margin-bottom: 25px;
+height: auto;
+display: block;
+}
+
+&::before {
+content: "";
+width: 100%;
+clear: both;
+display: block;
+}
+&::after {
+content: "";
+width: 100%;
+clear: both;
+display: block;
+}
+.road-map-circle {
+width: 200px;
+height: 200px;
+border-radius: 50%;
+border: 25px solid transparent;
+border-top-color: var(--secondary-color);
+border-right-color: var(--secondary-color);
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+margin: auto;
+transform: rotate(45deg);
+@media (max-width: 992px) {
+position: unset;
+border: 25px solid var(--secondary-color);
+}
+
+.road-map-circle-text {
+width: 110px;
+height: 110px;
+border-radius: 50%;
+/* background-color: var(); */
+font-size: 20px;
+font-weight: 600;
+line-height: 26px;
+text-transform: capitalize;
+color: #fff;
+box-shadow: 0px 0px 10px 5px #00000021;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+margin: auto;
+transform: rotate(-45deg);
+}
+}
+.road-map-card {
+width: 35%;
+/* // float: right; */
+background: var(--secondary-color);
+padding: 20px 20px;
+/* z-index: 1; */
+position: absolute;
+right: 0;
+border-radius: 5px;
+&::before {
+content: "";
+width: 25%;
+height: 20px;
+background: var(--secondary-color);
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+left: -20%;
+z-index: -1;
+}
+@media (max-width: 991px) {
+width: 100%;
+margin-top: 30px;
+position: unset;
+&::before {
+  content: "";
+  width: 20px;
+  height: 30%;
+  top: 50%;
+  transform: translateX(-50%);
+  left: 50%;
+}
+}
+@media (max-width: 425px) {
+top: 45%;
+}
+.card-head {
+font-size: 20px;
+font-weight: 600;
+text-transform: capitalize;
+margin: 0 0 15px;
+color: #fff;
+}
+.card-text {
+color: #fff;
+margin: 0;
+display: -webkit-box;
+-webkit-line-clamp: 5;
+-webkit-box-orient: vertical;
+overflow: hidden;
+@media (max-width: 1199px) {
+  -webkit-line-clamp: 4;
+}
+}
+}
+&:nth-of-type(even) {
+.road-map-circle {
+border-bottom-color: var(--secondary-color);
+border-left-color: var(--secondary-color);
+border-top-color: transparent;
+border-right-color: transparent;
+@media (max-width: 991px) {
+  border-color: var(--secondary-color);
+}
+}
+.road-map-card {
+/* // float: left; */
+left: 0;
+&::before {
+  right: -20%;
+  left: unset;
+  @media (max-width: 991px) {
+    content: "";
+    width: 20px;
+    height: 30%;
+    top: 50%;
+    transform: translateX(-50%);
+    left: 50%;
+  }
+  @media (max-width: 425px) {
+    top: 45%;
+  }
+}
+}
+}
+}
+}
+
+
+.wrapper {
+    width: 100%;
+    padding: 20px;
+    max-width: 1100px;
+    margin: auto;
+  }
+  
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .full-width {
+    width: 100%;
+  }
+  
+  .flex {
+    display: flex;
+  }
+  
+  .align-center {
+    align-items: center;
+  }
+  
+  .justify-center {
+    justify-content: center;
+  }
